@@ -58,7 +58,7 @@ export(finished)
 export(future)
 export(inspect)
 export(isResolved)
-export(lazyfuture)
+export(lazy)
 export(status)
 export(value)
 importFrom(BatchJobs,addRegistryPackages)
