@@ -1,11 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/LazyFuture.R
-\name{lazyfuture}
-\alias{lazyfuture}
+\name{lazy}
+\alias{lazy}
 \title{A lazy future represents a future whose value will be resolved at the time when it is requested}
 \usage{
-lazyfuture(expr, envir = parent.frame(), substitute = TRUE, local = TRUE,
-  ...)
+lazy(expr, envir = parent.frame(), substitute = TRUE, local = TRUE, ...)
 }
 \arguments{
 \item{expr}{An R \link[base]{expression}.}
@@ -42,12 +41,14 @@ this particular future.  Ideally, globals are resolved at the time when
 the future is created.  See example for an illustration of this.
 
 This function can be registered as the default \link{future} evaluator,
-i.e. \code{options(future=lazyfuture)}.
+i.e. \code{options(future=lazy)}.
 }
 \examples{
 ## A global variable
 a <- 0
-f <- lazyfuture({
+
+## Create lazy future
+f <- lazy({
   b <- 3
   c <- 2
   a * b * c
